# LPM.Org

./: Cargo.toml  LICENSE  Makefile  README.md  lpm.py  lpm_ui.py  luminosity.py  pyproject.toml  pytest.ini  requirements-ui.txt  requirements.txt  zstandard.py
benchmarks/: dependency_build.py  solver_bench.py
crates/lpm-cli/: Cargo.toml
crates/lpm-cli/src/: main.rs
crates/lpm-core/: Cargo.toml
crates/lpm-core/src/: cli.rs  fs_ops.rs  lib.rs  privileges.rs  solver.rs
crates/lpm-gui/: Cargo.toml
crates/lpm-gui/src/: main.rs
docs/: TECHNICAL-HOWTO.md
etc/lpm/: lpm.conf  mkchroot-rules.conf
hypothesis/: __init__.py  core.py  strategies.py
src/: __init__.py  arch_compat.py  atomic_io.py  config.py  fallback_db.py  first_run_ui.py  fs.py  hashutils.py  installgen.py  maintainer_mode.py  solver.py  zstandard_stub.py
src/etc/lpm/: lpm.conf
src/liblpmhooks/: __init__.py
src/lpm/: __init__.py  __main__.py  _zstd_stub.py  app.py  atomic_io.py  bootstrap.py  buildpkg.py  chroot.py  chroot_helpers.py  cli.py  cli_shim.py  config.py  delta.py  fs.py  fs_ops.py  installgen.py  installpkg.py  locking.py  priv.py  privileges.py  removepkg.py  resolver.py  sysconfig.py  ui_launcher.py
src/lpm/cli/: __init__.py  as_root.py  context.py  main.py  parser.py  planfile.py  planner.py  utils.py
src/lpm/cli/commands/: install.py
src/lpm/hooks/: __init__.py
src/lpm/ui/: backend.py  first_run.py  qt_app.py
src/ui/: app.py  backend.py  qt_app.py  qt_app_impl.py
src/usr/libexec/lpm/hooks/: gdk-pixbuf-query-loaders  glib-compile-schemas  python-compileall  sudo-permissions  systemd-daemon-reload  systemd-sysusers  update-desktop-database  update-grub  update-icon-cache
src/usr/share/liblpm/hooks/: gdk-pixbuf-query-loaders.hook  icon-cache.hook  kernel-install.hook  nss-modules.hook  (+1 more)
tests/: __init__.py  test_app_generate_deltas.py  test_arch_compatibility.py  test_arch_pkgbuild_compat.py  test_atomic_io.py  test_atomic_updates.py  test_autoremove.py  test_benchmarks.py  test_bootstrap.py  test_bootstrap_configure.py  test_build_chroot_helpers.py  test_buildgen_buildchroot.py  test_buildpkg_cpu_override.py  test_buildpkg_metadata_files.py  test_buildpkg_no_deps.py  test_buildpkg_python_pip.py  test_chroot.py  test_clean_cache.py  test_cli_help.py  test_cli_install_plan.py  test_cmd_files.py  test_collect_manifest_symlink.py  test_config_cpu.py  test_config_save.py  test_cpu_detect.py  test_createiso.py  test_db_migration_symbols.py  test_default_root_privileges.py  test_delta_basic.py  test_dependency_cycle.py  test_first_run_setup.py  test_fs_ops.py  test_heuristics.py  test_hooks.py  test_install_script_cache_updates.py  test_install_script_generator.py  test_installgen.py  test_installpkg_install_script.py  test_installpkg_symlink.py  test_installroot.py  (+29 more)
tools/: __init__.py  delta_publish.py  find_extension_modules.py  force_static_stdlib.py  get_version.py  list_python_hooks.py  setuptools_nuitka.py  update_fstab.py
tqdm/: __init__.py
usr/lib/sysusers.d/: lpm.conf
usr/lib/tmpfiles.d/: lpm.conf
usr/libexec/lpm/hooks/: _targets.py  fc-cache  gdk-pixbuf-query-loaders  gio-querymodules  glib-compile-schemas  kernel-install  ldconfig  system-maintenance  systemd-hwdb  systemd-tmpfiles  update-desktop-database  update-grub  update-icon-cache  update-mime-database
usr/share/liblpm/hooks/: fc-cache.hook  glib-compile-schemas.hook  kernel-install.hook  ldconfig.hook  python-compileall.hook  sudo-permissions.hook  system-maintenance.hook  systemd-hwdb.hook  systemd-sysusers.hook  systemd-tmpfiles.hook
usr/share/lpm/hooks/: kernel_install  post_source_fetch.py
(+9 files in other folders)
