[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "build",
]
build-backend = "setuptools.build_meta"
backend-path = ["."]

[project]
name = "lpm"
version = "1.0.0"
description = "Linux Package Manager with SAT solver, native .lpm packaging, signatures, and .lpmbuild support."
readme = "README.md"
authors = [{ name = "Derek Midkiff" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.6"]
nuitka = ["nuitka>=1.9"]

[project.entry-points."console_scripts"]
lpm = "lpm.app:main"
"lpm-ui" = "lpm.ui_launcher:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = {"" = "src"}
include-package-data = true
py-modules = ["config"]

[tool.setuptools.cmdclass]
build_nuitka = "tools.setuptools_nuitka.BuildNuitka"

[tool.setuptools.package-data]
"lpm" = ["bin/*"]

[tool.setuptools.data-files]
"etc/lpm" = ["etc/lpm/lpm.conf"]
"share/liblpm/hooks" = ["usr/share/liblpm/hooks/*.hook"]
"share/lpm/hooks" = ["usr/share/lpm/hooks/*"]
"share/lpm/hooks/post_install.d" = ["usr/share/lpm/hooks/post_install.d/.gitkeep"]
"share/lpm/hooks/post_upgrade.d" = ["usr/share/lpm/hooks/post_upgrade.d/.gitkeep"]
"libexec/lpm/hooks" = ["usr/libexec/lpm/hooks/*"]
"share/lpm/packages" = ["packages/lpm/lpm.lpmbuild"]
