[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "build",
]
build-backend = "setuptools.build_meta"

[project]
name = "lpm"
version = "1.0.0"
description = "Linux Package Manager with SAT solver, native .lpm packaging, signatures, and .lpmbuild support."
readme = "README.md"
authors = [{ name = "Derek Midkiff" }]
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
ui = ["PySide6>=6.6"]

[project.entry-points."console_scripts"]
lpm = "lpm.app:main"
lpm-ui = "lpm.ui_launcher:main"

[tool.setuptools]
packages = { find = { where = ["src"] } }
package-dir = { "" = "src" }
include-package-data = true
py-modules = ["config", "first_run_ui", "fs", "installgen", "maintainer_mode"]

[tool.setuptools.package-data]
lpm = ["bin/*"]

[tool.setuptools.data-files]
"etc/lpm" = ["etc/lpm/lpm.conf"]
"share/liblpm/hooks" = ["usr/share/liblpm/hooks/*.hook"]
"libexec/lpm/hooks" = ["usr/libexec/lpm/hooks/*"]
"share/lpm/packages" = ["packages/lpm/lpm.lpmbuild"]
