[package]
name = "lpm-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
parking_lot = "0.12"
log = "0.4"
uuid = { version = "1", features = ["v4"] }
